sql/core/src/test/resources/sql-tests/results/like-all.sql.out
-- Automatically generated by SQLQueryTestSuite
-- Number of queries: 12


-- !query
CREATE OR REPLACE TEMPORARY VIEW like_all_table AS SELECT * FROM (VALUES
  ('google', '%oo%'),
  ('facebook', '%oo%'),
  ('linkedin', '%in'))
  as t1(company, pat)
-- !query schema
struct<>
-- !query output



-- !query
select company from like_all_table where company like all ('%oo%', '%go%')
-- !query schema
struct<company:string>
-- !query output
google


-- !query
select company from like_all_table where company like all ('microsoft', '%yoo%')
-- !query schema
struct<company:string>
-- !query output



-- !query
select
    company,
    CASE
        WHEN company like all ('%oo%', '%go%') THEN 'Y'
        ELSE 'N'
    END AS is_available,
    CASE
        WHEN company like all ('%oo%', 'go%') OR company like all ('%in', 'ms%') THEN 'Y'
        ELSE 'N'
    END AS mix
From like_all_table
-- !query schema
struct<company:string,is_available:string,mix:string>
-- !query output
facebook	N	N
google	Y	Y
linkedin	N	N


-- !query
select company from like_all_table where company like all ('%oo%', pat)
-- !query schema
struct<company:string>
-- !query output
facebook
google


-- !query
select company from like_all_table where company not like all ('%oo%', '%in', 'fa%')
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_all_table where company not like all ('microsoft', '%yoo%')
-- !query schema
struct<company:string>
-- !query output
facebook
google
linkedin


-- !query
select company from like_all_table where company like all ('%oo%', null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_all_table where company not like all ('%oo%', null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_all_table where company not like all (null, null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_all_table where company not like all (null, null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_any_table where company like all ()
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.catalyst.parser.ParseException

Syntax error: expected something between '(' and ')'.(line 1, pos 49)

== SQL ==
select company from like_any_table where company like all ()
-------------------------------------------------^^^
